@@ -8,6 +8,7 @@ typedef int (*XCLOSEDISPLAY)(Display *);
 typedef void (*XQUERYKEYMAP)(Display *, unsigned char *);
 typedef int (*XDISPLAYKEYCODES)(Display *, int *, int *);
 typedef KeySym* (*XGETKEYBOARDMAPPING)(Display *, KeyCode, int, int *);
+typedef int (*XFREE)(void *);
 
 extern unsigned char fb_x11keycode_to_scancode[256];
 
@@ -15,7 +16,8 @@ void fb_hInitX11KeycodeToScancodeTb
 	(
 		Display *display,
 		XDISPLAYKEYCODES DisplayKeycodes,
-		XGETKEYBOARDMAPPING GetKeyboardMapping
+		XGETKEYBOARDMAPPING GetKeyboardMapping,
+		XFREE Free
 	);
 
 #endif
